<resources>
    <string name="app_name">Recipely</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="recipe_ingredients">Recipe Ingredients</string>
    <string name="ingredients_count">Recipe Ingredients Count</string>
    <string name="instructions">Instructions</string>
    <string name="healthy_ingredients">Healthy Ingredients</string>
    <string name="indianFood">Indian Food Breakfast</string>
    <string name="image">image</string>
    <string name="discover_recipes">Discover Recipes 🍩🍿</string>
    <string name="search_about_recipes">Search about recipes 🍔</string>
    <string name="no_recipes">No recipes matches your search 😪😪!</string>
    <string name="enter_valid_data">Please enter valid data</string>
    <string name="recipe_type">Recipe Type</string>
    <string name="see_all">View More</string>
    <string name="kitchen_name">Indian Cuisine</string>
    <string name="settings">Settings</string>
    <string name="ingredients">Ingredients</string>
    <string name="search">Search</string>
    <string name="cuisines">Cuisines</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="view_all">View All</string>
    <string name="home_title">Find best recipes \nfor cooking</string>
    <string name="easy_to_cook">Easy to Cook</string>
    <string name="advices">Advices</string>
    <string name="burgur">burgur</string>
    <string name="editors">editors</string>
    <string name="breakfast">breakfast</string>
    <string name="chef_name">chef_name</string>
    <string name="popular">popular</string>
    <string name="back_to_cuisines">Back To Cuisines</string>
    <string name="recipley_instructions">Recipley Instructions</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
</resources>