<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/icon_search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_cuisine"
        android:enabled="true"
        android:icon="@drawable/icon_cuisine"
        android:title="@string/cuisines" />

    <item
        android:id="@+id/navigation_advice"
        android:enabled="true"
        android:icon="@drawable/icon_advice"
        android:title="@string/advices" />

</menu>