<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_one"
    android:id="@+id/container_view"
    tools:context=".ui.onboardingScreen.OnboardingFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_ff"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text18"
        android:layout_margin="@dimen/space24"
        android:text="@string/next"
        android:layout_gravity="end"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space24"
        android:layout_marginTop="@dimen/space24"
        android:layout_marginBottom="@dimen/space24"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/skip"
        android:textColor="@color/white_ff"
        android:textSize="@dimen/text18"
        android:layout_gravity="start|top" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space16"
        android:backgroundTint="@color/secondary"
        android:padding="@dimen/space8"
        android:text="@string/get_started"
        android:textColor="@color/white_ff"
        app:cornerRadius="@dimen/space8"
        android:layout_gravity="bottom" />

</FrameLayout>