<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboardingScreen.OnBoardingActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_ff"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/text18"
        android:layout_margin="@dimen/space24"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space24"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/skip"
        android:textColor="@color/white_ff"
        android:textSize="@dimen/text18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space16"
        android:backgroundTint="@color/secondary"
        android:padding="@dimen/space8"
        android:text="@string/get_started"
        android:textColor="@color/white_ff"
        app:cornerRadius="@dimen/space8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />
    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/slideViewPager">
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>