<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constrain_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_e1"
    app:layoutDescription="@xml/fragment_recipe_details_scene">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/space8"
        android:layout_marginVertical="@dimen/space8"
        app:cardCornerRadius="@dimen/space24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/base_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_fa">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/recipe_details_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/base_constraint"
                app:srcCompat="@drawable/food_image" />

            <view
                android:id="@+id/view"
                class="androidx.constraintlayout.widget.ConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:layout_marginTop="@dimen/space16"
                android:outlineSpotShadowColor="@color/black87"
                app:layout_constraintEnd_toEndOf="@id/recipe_details_image"
                app:layout_constraintStart_toStartOf="@id/recipe_details_image"
                app:layout_constraintTop_toTopOf="@id/recipe_details_image">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ic_keyboard_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/space16"
                    android:layout_marginTop="@dimen/space32"
                    android:background="@drawable/back_to_home"
                    app:layout_constraintStart_toStartOf="@id/recipe_details_image"
                    app:layout_constraintTop_toTopOf="@id/recipe_details_image"
                    app:srcCompat="@drawable/icon_keyboard_arrow" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/recipe_details_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space32"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:gravity="center"
                    style="@style/whiteTextShadow"
                    android:text="@string/recipe_details"
                    android:textColor="@color/white_ff"
                    android:textSize="@dimen/text18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.402"
                    app:layout_constraintStart_toEndOf="@+id/ic_keyboard_arrow"
                    app:layout_constraintTop_toTopOf="@id/recipe_details_image" />

            </view>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/first_sub_card_view"
        style="@style/subCards"
        android:layout_width="match_parent"
        android:layout_height="@dimen/first_sub_card_view_height"
        android:layout_marginTop="@dimen/first_sub_card_view_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_sub_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sub_card_view_border">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipe_details_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space16"
                android:layout_marginTop="@dimen/space16"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_semi_bold"
                android:lines="2"
                android:textColor="@color/black87"
                android:textSize="@dimen/text14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/first_sub_constraint"
                app:layout_constraintTop_toTopOf="@id/first_sub_constraint"
                tools:text="Black Bean Burrito" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipe_details_cuisine"
                style="@style/firstSubCardViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_verified"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/first_sub_constraint"
                app:layout_constraintTop_toBottomOf="@id/recipe_details_name"
                tools:text="Spinach" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipe_details_time"
                style="@style/firstSubCardViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space16"
                android:drawableStart="@drawable/icon_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/recipe_details_cuisine"
                app:layout_constraintTop_toBottomOf="@id/recipe_details_name"
                tools:text="15 Mins" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/second_sub_card_view"
        style="@style/subCards"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_zero"
        android:layout_marginTop="@dimen/space24"
        android:layout_marginBottom="@dimen/space8"
        app:layout_constraintBottom_toBottomOf="@+id/main_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_sub_card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_sub_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sub_card_view_border">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ic_ingredients_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space16"
                android:layout_marginStart="@dimen/space32"
                android:drawableStart="@drawable/icon_ingredients"
                android:drawablePadding="@dimen/space8"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/ingredients"
                android:textColor="@color/black87"
                android:textSize="@dimen/text18"
                app:layout_constraintStart_toStartOf="@id/second_sub_constraint"
                app:layout_constraintTop_toTopOf="@id/second_sub_constraint" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space2"
                android:layout_marginTop="@dimen/space16"
                android:background="@color/white_e1"
                app:layout_constraintEnd_toEndOf="@id/second_sub_constraint"
                app:layout_constraintStart_toStartOf="@id/second_sub_constraint"
                app:layout_constraintTop_toBottomOf="@id/ic_ingredients_text" />

            <ScrollView
                android:id="@+id/ic_ingredients_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_zero"
                android:padding="@dimen/space16"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space8"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/recipe_details_ingredients_count_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/ingredients_count"
                            android:textColor="@color/secondary"
                            android:textSize="@dimen/text16" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/recipe_details_ingredients_count"
                            style="@style/secondSubCardViewContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="10 Items" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space8"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/recipe_details_ingredients_text"
                            style="@style/secondSubCardViewHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_ingredients" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/recipe_details_ingredients"
                            style="@style/secondSubCardViewContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="3 tablespoon Gram flour (besan);2 teaspoons Cumin seeds (Jeera);1 tablespoon Coriander Powder (Dhania);2 teaspoons Turmeric powder (Haldi);Salt - to taste;1 tablespoon Amchur (Dry Mango Powder);6 Karela (Bitter Gourd/ Pavakkai) - deseeded;Sunflower Oil - as required;1 Onion - thinly sliced" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space8"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/recipe_details_Instructions_text"
                            style="@style/secondSubCardViewHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instructions" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/recipe_details_Instructions"
                            style="@style/secondSubCardViewContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="To begin making the Masala Karela Recipe;de-seed the karela and slice.Do not remove the skin as the skin has all the nutrients.Add the karela to the pressure cooker with 3 tablespoon of water; salt and turmeric powder and pressure cook for three whistles.Release the pressure immediately and open the lids.Keep aside.Heat oil in a heavy bottomed pan or a kadhai.Add cumin seeds and let it sizzle.Once the cumin seeds have sizzled; add onions and saute them till it turns golden brown in color.Add the karela; red chilli powder; amchur powder; coriander powder and besan.Stir to combine the masalas into the karela.Drizzle a little extra oil on the top and mix again.Cover the pan and simmer Masala Karela stirring occasionally until everything comes together well.Turn off the heat.Transfer Masala Karela into a serving bowl and serve.Serve Masala Karela along with Panchmel Dal and Phulka for a weekday meal with your family" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space8"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/recipe_details_health_ingredients_text"
                            style="@style/secondSubCardViewHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/healthy_ingredients" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/recipe_details_health_ingredients"
                            style="@style/secondSubCardViewContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/space24"
                            tools:text="salt;amchur (dry mango powder);karela (bitter gourd pavakkai);red chilli powder;gram flour (besan);onion;cumin seeds (jeera);coriander powder;turmeric powder;sunflower oil" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.motion.widget.MotionLayout>